Name:                kontiki-leveldb
Version:             0.0.0.0
Synopsis:            An implementation of kontiki using LevelDB as transaction log
Description:         
Homepage:            http://github.com/alphaHeavy/kontiki-leveldb

Author:              Steve Severance
Maintainer:          sseverance@alphaheavy.com
Copyright:           (c) 2014, Alpha Heavy Industries

License:             BSD3
License-File:        LICENSE

Category:            Network
Build-Type:          Simple
Cabal-Version:       >=1.8

Source-Repository head
  Type:     git
  location: git://github.com/alphaHeavy/kontiki-leveldb.git

Library
  Exposed-Modules:     Data.Kontiki.LevelDB
  Build-Depends:       base >= 4 && < 5
                     , containers
                     , binary >= 0.6.3
                     , bytestring >= 0.10
                     , filepath
                     , forkable-monad
                     , kontiki
                     , lens
                     , leveldb-haskell
                     , mtl
                     , resourcet >= 1.1.2
                     , transformers
                     , transformers-base
                     , QuickCheck
  Ghc-Options:         -Wall -fwarn-incomplete-patterns
  hs-source-dirs:      src

test-suite kontiki-leveldb-test
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base,
    binary,
    test-framework             >= 0.4,
    test-framework-hunit       >= 0.2,
    test-framework-quickcheck2 >= 0.2,
    HUnit,
    QuickCheck
